--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<div class="jumbotron hero-photography carousel-hero">
+				<div class="jumbotron hero-photography carousel-hero img-responsive"">
 					<h1 class="hero-title">BONJOUR GOA</h1>
 					<p class="hero-subtitle">Nullam id dolor id nibh ultricies
 						vehicula ut id elit. Cras justo odio, dapibus ac facilisis in,
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<div class="jumbotron hero-technology carousel-hero">
+				<div class="jumbotron hero-technology carousel-hero img-responsive"">
 					<h1 class="hero-title">BONJOUR GOA</h1>
 					<p class="hero-subtitle">Nullam id dolor id nibh ultricies
 						vehicula ut id elit. Cras justo odio, dapibus ac facilisis in,
@@ -81,41 +81,7 @@
 
 
 
-				<div class="jumbotron hero-beach carousel-hero">
-					<h1 class="hero-title">BONJOUR GOA</h1>
-					<p class="hero-subtitle">Nullam id dolor id nibh ultricies
-						vehicula ut id elit. Cras justo odio, dapibus ac facilisis in,
-						egestas eget quam.</p>
-					<p>
-						<a class="btn btn-primary btn-lg hero-button" role="button"
-							href="#">Learn more</a>
-					</p>
-				</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-			</div>
-			<div class="item">
-
-
-
-
-
-
-
-
-
-				<div class="jumbotron hero-mountain carousel-hero">
+				<div class="jumbotron hero-beach carousel-hero img-responsive"">
 					<h1 class="hero-title">BONJOUR GOA</h1>
 					<p class="hero-subtitle">Nullam id dolor id nibh ultricies
 						vehicula ut id elit. Cras justo odio, dapibus ac facilisis in,
@@ -138,6 +104,40 @@
 
 
 
+			</div>
+			<div class="item">
+
+
+
+
+
+
+
+
+
+				<div class="jumbotron hero-mountain carousel-hero img-responsive"">
+					<h1 class="hero-title">BONJOUR GOA</h1>
+					<p class="hero-subtitle">Nullam id dolor id nibh ultricies
+						vehicula ut id elit. Cras justo odio, dapibus ac facilisis in,
+						egestas eget quam.</p>
+					<p>
+						<a class="btn btn-primary btn-lg hero-button" role="button"
+							href="#">Learn more</a>
+					</p>
+				</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 			</div>
 			<div class="item">
@@ -148,7 +148,7 @@
 
 
 
-				<div class="jumbotron hero-fort carousel-hero">
+				<div class="jumbotron hero-fort carousel-hero img-responsive"">
 					<h1 class="hero-title">BONJOUR GOA</h1>
 					<p class="hero-subtitle">Nullam id dolor id nibh ultricies
 						vehicula ut id elit. Cras justo odio, dapibus ac facilisis in,
