--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						egestas eget quam.</p>
 					<p>
 						<a class="btn btn-primary btn-lg hero-button" role="button"
-							href="#">Learn more</a>
+							href="#">View Gallery</a>
 					</p>
 				</div>
 			</div>
@@ -57,7 +57,7 @@
 						egestas eget quam.</p>
 					<p>
 						<a class="btn btn-primary btn-lg hero-button" role="button"
-							href="#">Learn more</a>
+							href="#">View Gallery</a>
 					</p>
 				</div>
 			</div>
@@ -69,7 +69,7 @@
 						egestas eget quam.</p>
 					<p>
 						<a class="btn btn-primary btn-lg hero-button" role="button"
-							href="#">Learn more</a>
+							href="#">View Gallery</a>
 					</p>
 				</div>
 			</div>
@@ -88,7 +88,7 @@
 						egestas eget quam.</p>
 					<p>
 						<a class="btn btn-primary btn-lg hero-button" role="button"
-							href="#">Learn more</a>
+							href="#">View Gallery</a>
 					</p>
 				</div>
 
@@ -122,7 +122,7 @@
 						egestas eget quam.</p>
 					<p>
 						<a class="btn btn-primary btn-lg hero-button" role="button"
-							href="#">Learn more</a>
+							href="#">View Gallery</a>
 					</p>
 				</div>
 
@@ -155,7 +155,7 @@
 						egestas eget quam.</p>
 					<p>
 						<a class="btn btn-primary btn-lg hero-button" role="button"
-							href="#">Learn more</a>
+							href="#">View Gallery</a>
 					</p>
 				</div>
 
